# havi

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  build-pins.json  build.ts  package.json  postinstall.js  rust-toolchain.toml  ship.ts  tsconfig.json
docs/superpowers/plans/: 2026-06-11-multi-render-host.md  2026-06-11-process-per-render.md
docs/superpowers/specs/: 2026-06-10-multi-render-host-design.md  2026-06-11-process-per-render-design.md
examples/: README.md  audio-context.html  canvas-particles.html  css-keyframes.html  stamp.html  svg-spinner.html  transparent-ring.html  typing.html
havi/: havi.js  index.d.ts  index.js
scripts/: smoke_cancel.mjs  smoke_parallel.mjs  smoke_tolerant.sh
src/: api.rs  cli.rs  lib.rs  main.rs  proxy.rs
src/cef/: app.rs  cdp.rs  client.rs  helper.rs  mac.rs  mod.rs  perm.rs  resource.rs
src/common/: ipc.rs  mod.rs  sandbox.rs  win_job.rs
src/host/: ipc.rs  mod.rs  render.rs  run.rs
src/napi/: mod.rs
src/renderer/: capture.rs  flags.rs  host.rs  load.rs  mod.rs  paint.rs
src/runtime/: dom_ready_hook.js  host_shim.js  iframe_hook.js  iframe_video_hook.js
src/video/: decode.rs  encoder.rs  mod.rs  scheme.rs  scheme_url.rs  session.rs
